# 2023

./: .gitignore  LICENSE  test.xml
.github/: CODEOWNERS
hw3/: CMakeLists.txt
hw3/include/: header.h
hw3/src/: first.cpp  second.cpp  third.cpp
smart-home/: CMakeLists.txt  README.md  readme.md  test.xml
smart-home-application/: App.cpp  App.h  CMakeLists.txt  Device.cpp  Device.h  README.md  Room.cpp  Room.h  Sensor.cpp  Sensor.h  main.cpp  test.xml  test_configuration1.xml
smart-home-application/include/: ACUnitDevice.h  App.h  Device.h  DevicePrinter.h  DistanceSensor.h  DoorbellDevice.h  HumiditySensor.h  LightDevice.h  Room.h  Sensor.h  TemperatureSensor.h  UniquePointer.h  XMLWriter.h
smart-home-application/src/: ACUnitDevice.cpp  App.cpp  Device.cpp  DevicePrinter.cpp  DistanceSensor.cpp  DoorbellDevice.cpp  HumiditySensor.cpp  LightDevice.cpp  Printer.cpp  Reader.cpp  Room.cpp  Sensor.cpp  SensorPrinter.cpp  TemperatureSensor.cpp  UniquePointer.cpp  Writer.cpp  XMLReader.cpp  XMLWriter.cpp  main.cpp
smart-home/include/: ACHeatingStatus.h  ACUnitDevice.h  ACUnitDevicePrinter.h  ACUnitDeviceReader.h  AirQualityLevel.h  AirQualityLevelMessage.h  AirQualitySensor.h  App.h  ClientApp.h  Date.h  Deleter.h  Device.h  DeviceFactory.h  DevicePrinter.h  DeviceReader.h  DeviceStatus.h  DeviceStatusMessage.h  DeviceType.h  DeviceTypeMessage.h  DistanceSensor.h  DoorbellDevice.h  HumiditySensor.h  LightDevice.h  Message.h  MessageDeviceStatus.h  MessageDeviceType.h  MessageSensorStatus.h  MessageSensorType.h  Printer.h  Reader.h  Room.h  RoomPrinter.h  Sensor.h  SensorFactory.h  SensorPrinter.h  SensorStatus.h  SensorStatusMessage.h  SensorType.h  SensorTypeMessage.h  ServerApp.h  (+25 more)
smart-home/scripts/: daily_requests.sh  num_matches.txt  request.txt
smart-home/src/: ACUnitDevice.cpp  ACUnitDevicePrinter.cpp  ACUnitDeviceReader.cpp  AirQualityLevelMessage.cpp  AirQualitySensor.cpp  App.cpp  ClientApp.cpp  Date.cpp  DeviceFactory.cpp  DeviceStatusMessage.cpp  DeviceTypeMessage.cpp  DistanceSensor.cpp  DoorbellDevice.cpp  HumiditySensor.cpp  Message.cpp  MessageDeviceStatus.cpp  MessageDeviceType.cpp  MessageSensorStatus.cpp  MessageSensorType.cpp  Room.cpp  RoomPrinter.cpp  SensorFactory.cpp  SensorStatusMessage.cpp  SensorTypeMessage.cpp  ServerApp.cpp  ServerConnection.cpp  Socket.cpp  SpeakerDevice.cpp  SpeakerDevicePrinter.cpp  SpeakerDeviceReader.cpp  TemperatureSensor.cpp  ThermostatDevice.cpp  ThermostatDevicePrinter.cpp  ThermostatDeviceReader.cpp  ThreadPool.cpp  ThreadedPrintingService.cpp  XMLACUnitDeviceReader.cpp  XMLACUnitDeviceWriter.cpp  XMLReader.cpp  XMLRoomReader.cpp  (+8 more)
smart-home/unique-ptr/: unique_ptr.h  unique_ptr_init.h
